--- a/css/main.css
+++ b/css/main.css
@@ -1068,8 +1068,6 @@ body {
 }
 .products__title {
   position: absolute;
-  margin-top: -64px;
-  margin-left: 68px;
   font-family: var(--title_font);
   font-style: normal;
   font-weight: 400;
@@ -1082,70 +1080,53 @@ body {
 .products__title::before {
   content: "";
   position: absolute;
-  left: -280px;
-  margin-top: 30px;
   width: 716px;
   height: 8px;
   background: var(--lines_color);
   border-radius: 0px 8px 8px 0px;
 }
-@media screen and (min-width: 834px) {
-  .products__title {
-    font-size: 16px;
-  }
+.products__title--type1 {
+  margin-top: -64px;
+  margin-left: 68px;
 }
-@media screen and (min-width: 1440px) {
-  .products__title {
-    font-size: 18px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .products__title {
-    font-size: 24px;
-  }
+.products__title--type1::before {
+  margin-top: 30px;
+  margin-left: -281px;
 }
 .products__title--type2 {
-  position: absolute;
   right: 200px;
   margin-top: 56px;
-  font-family: var(--title_font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 150%;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  color: var(--title_color);
 }
 .products__title--type2::before {
-  content: "";
-  position: absolute;
   margin-top: 30px;
-  width: 716px;
-  height: 8px;
-  background: var(--lines_color);
-  border-radius: 8px 0px 0px 8px;
 }
 .products__title--type3 {
-  margin-top: 140px;
-  margin-bottom: 60px;
-  font-family: var(--title_font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 150%;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  color: var(--title_color);
+  left: 308px;
+  margin-top: -64px;
 }
 .products__title--type3::before {
-  content: "";
-  position: absolute;
+  left: -307px;
+  margin-top: 30px;
+}
+.products__title--type4 {
+  position: static;
+  margin-top: 140px;
+  margin-bottom: 60px;
+  font-size: 20px;
+}
+.products__title--type4::before {
   margin-top: 30px;
   margin-left: -92px;
-  width: 716px;
-  height: 8px;
-  background: var(--lines_color);
+  border-radius: 8px;
+}
+.products__title--type5 {
+  position: static;
+  margin-top: 680px;
+  font-size: 20px;
+}
+.products__title--type5::before {
+  margin-top: 30px;
+  margin-left: -212px;
   border-radius: 8px;
 }
 .products__gallery-list {
