--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -8,6 +8,7 @@ body {
     letter-spacing: 0em;
     color: var(--title_color);
     text-align: center;
+    // background-color: #FFFAFA;
 
     @media screen and (min-width: 390px) {}
 
