--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -3,6 +3,7 @@
     width: 100%;
     margin: 0 auto;
     // outline: 2px solid rgb(37, 34, 209);
+    // background-color: #FFFFFF;
 
     @media screen and (min-width: 390px) {
         width: 390px;
