--- a/sass/layouts/_products.scss
+++ b/sass/layouts/_products.scss
@@ -105,8 +105,7 @@
 
     &__title--type5 {
         position: static;
-        margin-top: 680px;
-        // margin-bottom: 60px;
+        margin-top: 140px;
         font-size: 20px;
 
         &::before {
@@ -116,7 +115,9 @@
         }
     }
 
-    // &__gallery {}
+    &__gallery {
+        position: static;
+    }
 
     &__gallery-list {
         display: flex;
@@ -142,8 +143,7 @@
     }
 
     &__gallery-text {
-        position: absolute;
-        margin-top: 392px;
+        margin-top: -48px;
         margin-left: 342px;
         width: 618px;
         height: 88px;
@@ -158,85 +158,70 @@
         color: #15100F;
     }
 
-    &__carousel {
+    &__photo-wrapper {
+        width: 1302px;
+    }
+
+    &__photo-wrapper_list {
+        position: static;
         display: flex;
         margin-top: 60px;
-        width: 1302px;
-        overflow: hidden;
+        // width: 1302px;
+        // overflow: hidden;
+        transition: transform 0.3s ease;
         cursor: pointer;
     }
 
-    &__carousel-item {
-        // margin-top: 60px;
+    &__photo-wrapper_item {
         min-width: 304px;
         height: 360px;
-
         transition: transform 0.3s ease;
-
-        &:hover {
-            transform: scale(0.9);
-        }
-
 
         &:first-child {
             margin-left: -153px;
         }
 
-        &:nth-child(even) {
-            margin-left: 22px;
-            margin-right: 22px;
-        }
-
-        &.visible {
-            opacity: 1;
-            transform: translateX(0%);
-        }
-    }
-
-    &__carousel-textblock {
-        display: flex;
-        margin-top: 432px;
-    }
-
-    &__carousel-text {
-        width: 476px;
-        height: 120px;
-        padding: 12px;
-        background: radial-gradient(80.5% 80.5% at 50% 50%, rgba(193, 250, 246, 0) 60.42%, #C1FAF6 100%);
-        border-radius: 8px;
-
-        font-family: var(--text_font);
-        font-size: 16px;
-        line-height: 200%;
-        letter-spacing: 0.05em;
-        color: var(--text_color);
+        // &:first-child:hover {
+        //     margin-right: 153px;
+        //     transform: translateX(50%);
+        // }
 
         &:last-child {
-            margin-left: 349px;
+            margin-right: -153px;
         }
+
+        // &:last-child:hover {
+        //     margin-left: -153px;
+        //     transform: translateX(50%);
+        // }
+
+    }
+
+    &:nth-child(even) {
+        margin-left: 22px;
+        margin-right: 22px;
     }
 }
 
-// .photo-container img {
-//     transition: transform 0.3s ease;
-// }
-
-// .photo-container img:hover {
-//     transform: scale(1.1);
-// }
-
-// .photo-container img.left {
-//     transform: translateX(-100%);
-// }
-
-// .photo-container img.right {
-//     transform: translateX(100%);
-// }
-
-.left {
-    transform: translateX(-100%);
+&__photo-wrapper_textblock {
+    display: flex;
+    margin-top: 12px;
 }
 
-.right {
-    transform: translateX(100%);
+&__photo-wrapper_text {
+    width: 476px;
+    height: 120px;
+    padding: 12px;
+    background: radial-gradient(80.5% 80.5% at 50% 50%, rgba(193, 250, 246, 0) 60.42%, #C1FAF6 100%);
+    border-radius: 8px;
+
+    font-family: var(--text_font);
+    font-size: 16px;
+    line-height: 200%;
+    letter-spacing: 0.05em;
+    color: var(--text_color);
+
+    &:last-child {
+        margin-left: 349px;
+    }
 }
