--- a/css/main.css
+++ b/css/main.css
@@ -1049,7 +1049,12 @@ body {
   }
 }
 .products__list {
-  display: flex;
+  display: block;
+}
+@media screen and (min-width: 834px) {
+  .products__list {
+    display: flex;
+  }
 }
 .products__list--average {
   margin-top: 180px;
@@ -1057,6 +1062,7 @@ body {
 }
 .products__section {
   margin-top: 32px;
+  background-size: contain;
 }
 @media screen and (min-width: 834px) {
   .products__section {
@@ -1069,21 +1075,27 @@ body {
   }
 }
 .products__section--type2 {
-  margin-top: 24px;
+  margin-top: 32px;
   margin-left: 102px;
   margin-right: 102px;
+}
+@media screen and (min-width: 834px) {
+  .products__section--type2 {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .products__section--type2 {
     margin-top: 24px;
-    margin-left: 73px;
-    margin-right: 73px;
+    margin-left: 55px;
+    margin-right: 55px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__section--type2 {
-    margin-left: 102px;
-    margin-right: 102px;
+    margin-left: 84px;
+    margin-right: 84px;
   }
 }
 .products__section--type3 {
@@ -1127,27 +1139,59 @@ body {
 @media screen and (min-width: 834px) {
   .products__title::before {
     width: 380px;
-    height: 6px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title::before {
     width: 598px;
-    height: 8px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__title::before {
+    height: 6px;
     width: 716px;
   }
 }
 .products__title--type1 {
-  margin-top: -64px;
-  margin-left: 68px;
+  margin-top: 48px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type1 {
+    margin-top: -24px;
+    margin-left: 90px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__title--type1 {
+    margin-top: -64px;
+    margin-left: 160px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__title--type1 {
+    margin-left: 148px;
+  }
 }
 .products__title--type1::before {
   margin-top: 30px;
-  margin-left: -281px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type1::before {
+    margin-top: 24px;
+    margin-left: -88px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__title--type1::before {
+    margin-top: 24px;
+    margin-left: -271px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__title--type1::before {
+    margin-top: 32px;
+    margin-left: -281px;
+  }
 }
 .products__title--type2 {
   margin-top: 56px;
@@ -1356,8 +1400,29 @@ body {
   }
 }
 .card__image {
+  min-width: 296px;
+  height: 364px;
   box-shadow: 1px 1px 8px 0px rgba(21, 16, 15, 0.5);
   border-radius: 8px;
+}
+@media screen and (min-width: 834px) {
+  .card__image {
+    width: 200px;
+    min-width: 200px;
+    height: 280px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .card__image {
+    min-width: 296px;
+    height: 364px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .card__image {
+    min-width: 360px;
+    height: 440px;
+  }
 }
 .card__title {
   position: relative;
