--- a/sass/layouts/_products.scss
+++ b/sass/layouts/_products.scss
@@ -16,7 +16,11 @@
     }
 
     &__list {
-        display: flex;
+        display: block;
+
+        @media screen and (min-width: 834px) {
+            display: flex;
+        }
     }
 
     &__list--average {
@@ -27,6 +31,7 @@
 
     &__section {
         margin-top: 32px;
+        background-size: contain;
 
         @media screen and (min-width: 834px) {
             margin-top: 46px;
@@ -40,21 +45,24 @@
     }
 
     &__section--type2 {
-        margin-top: 24px;
+        margin-top: 32px;
         margin-left: 102px;
         margin-right: 102px;
 
-        @media screen and (min-width: 834px) {}
+        @media screen and (min-width: 834px) {
+            margin-left: 50px;
+            margin-right: 50px;
+        }
 
         @media screen and (min-width: 1440px) {
             margin-top: 24px;
-            margin-left: 73px;
-            margin-right: 73px;
+            margin-left: 55px;
+            margin-right: 55px;
         }
 
         @media screen and (min-width: 1728px) {
-            margin-left: 102px;
-            margin-right: 102px;
+            margin-left: 84px;
+            margin-right: 84px;
         }
     }
 
@@ -73,7 +81,6 @@
     &__title {
         position: absolute;
         font-family: var(--title_font);
-        // font-style: normal;
         font-weight: 400;
         font-size: 16px;
         line-height: 150%;
@@ -107,15 +114,14 @@
 
             @media screen and (min-width: 834px) {
                 width: 380px;
-                height: 6px;
             }
 
             @media screen and (min-width: 1440px) {
                 width: 598px;
-                height: 8px;
             }
 
             @media screen and (min-width: 1728px) {
+                height: 6px;
                 width: 716px;
             }
         }
@@ -123,12 +129,40 @@
     }
 
     &__title--type1 {
-        margin-top: -64px;
-        margin-left: 68px;
+        margin-top: 48px;
+
+        @media screen and (min-width: 834px) {
+            margin-top: -24px;
+            margin-left: 90px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            margin-top: -64px;
+            margin-left: 160px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            // margin-left: 68px;
+            margin-left: 148px;
+        }
 
         &::before {
             margin-top: 30px;
-            margin-left: -281px;
+
+            @media screen and (min-width: 834px) {
+                margin-top: 24px;
+                margin-left: -88px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: 24px;
+                margin-left: -271px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-top: 32px;
+                margin-left: -281px;
+            }
         }
     }
 
