--- a/css/main.css
+++ b/css/main.css
@@ -1049,7 +1049,7 @@ body {
   }
 }
 .products__list {
-  display: block;
+  display: inline-block;
 }
 @media screen and (min-width: 834px) {
   .products__list {
@@ -1060,54 +1060,67 @@ body {
   margin-top: 180px;
   margin-bottom: 180px;
 }
-.products__section {
-  margin-top: 32px;
-  background-size: contain;
+.products__section--type1 {
+  margin-top: 50px;
 }
 @media screen and (min-width: 834px) {
-  .products__section {
-    margin-top: 46px;
+  .products__section--type1 {
+    margin-top: 70px;
   }
 }
 @media screen and (min-width: 1440px) {
-  .products__section {
-    margin-top: 64px;
+  .products__section--type1 {
+    margin-top: 51px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__section--type1 {
+    margin-top: 62px;
   }
 }
 .products__section--type2 {
-  margin-top: 32px;
-  margin-left: 102px;
-  margin-right: 102px;
+  margin-top: 50px;
 }
 @media screen and (min-width: 834px) {
   .products__section--type2 {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 38px;
+    margin-left: 68px;
+    margin-right: 68px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__section--type2 {
-    margin-top: 24px;
-    margin-left: 55px;
-    margin-right: 55px;
+    margin-top: 17px;
+    margin-left: 73px;
+    margin-right: 73px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__section--type2 {
-    margin-left: 84px;
-    margin-right: 84px;
+    margin-top: 22px;
+    margin-left: 102px;
+    margin-right: 102px;
   }
 }
 .products__section--type3 {
-  margin-top: -20px;
+  margin-top: 50px;
+}
+@media screen and (min-width: 834px) {
+  .products__section--type3 {
+    margin-top: 10px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .products__section--type3 {
-    margin-top: -20px;
+    margin-top: -17px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__section--type3 {
+    margin-top: -22px;
   }
 }
 .products__title {
-  position: absolute;
   font-family: var(--title_font);
   font-weight: 400;
   font-size: 16px;
@@ -1115,6 +1128,11 @@ body {
   letter-spacing: 0.8px;
   text-transform: uppercase;
   color: var(--title_color);
+}
+@media screen and (min-width: 834px) {
+  .products__title {
+    position: absolute;
+  }
 }
 @media screen and (min-width: 1440px) {
   .products__title {
@@ -1132,7 +1150,7 @@ body {
   content: "";
   position: absolute;
   width: 296px;
-  height: 4px;
+  height: 2px;
   background: var(--lines_color);
   border-radius: 0px 8px 8px 0px;
 }
@@ -1143,6 +1161,7 @@ body {
 }
 @media screen and (min-width: 1440px) {
   .products__title::before {
+    height: 4px;
     width: 598px;
   }
 }
@@ -1173,11 +1192,11 @@ body {
   }
 }
 .products__title--type1::before {
-  margin-top: 30px;
+  margin-top: 24px;
 }
 @media screen and (min-width: 834px) {
   .products__title--type1::before {
-    margin-top: 24px;
+    margin-top: 22px;
     margin-left: -88px;
   }
 }
@@ -1202,12 +1221,46 @@ body {
   border-radius: 8px 0px 0px 8px;
 }
 .products__title--type3 {
-  margin-top: -64px;
-  margin-left: 95px;
+  margin-top: 48px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type3 {
+    margin-top: -24px;
+    margin-bottom: 0;
+    margin-left: 90px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__title--type3 {
+    margin-top: -64px;
+    margin-left: 160px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__title--type3 {
+    margin-left: 148px;
+  }
 }
 .products__title--type3::before {
-  margin-top: 30px;
-  margin-left: -308px;
+  margin-top: 24px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type3::before {
+    margin-top: 22px;
+    margin-left: -88px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__title--type3::before {
+    margin-top: 24px;
+    margin-left: -271px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__title--type3::before {
+    margin-top: 32px;
+    margin-left: -308px;
+  }
 }
 .products__title--type4 {
   position: static;
