--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'base/section-narrow';
 @import 'utils/variable';
 @import 'utils/visually-hidden';
+@import 'utils/text-hidden';
 @import 'components/caption';
 
 //Header section
