--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,15 @@ body {
   overflow: hidden;
 }
 
+.text-hidden {
+  visibility: hidden;
+}
+@media screen and (min-width: 834px) {
+  .text-hidden {
+    visibility: visible;
+  }
+}
+
 .caption {
   margin: 0 auto;
   padding-top: 114px;
@@ -1080,6 +1089,7 @@ body {
 }
 .products__section--type2 {
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 834px) {
   .products__section--type2 {
@@ -1102,9 +1112,6 @@ body {
     margin-right: 102px;
   }
 }
-.products__section--type3 {
-  margin-top: 50px;
-}
 @media screen and (min-width: 834px) {
   .products__section--type3 {
     margin-top: 10px;
@@ -1121,6 +1128,7 @@ body {
   }
 }
 .products__title {
+  margin-top: 48px;
   font-family: var(--title_font);
   font-weight: 400;
   font-size: 16px;
@@ -1132,10 +1140,12 @@ body {
 @media screen and (min-width: 834px) {
   .products__title {
     position: absolute;
+    margin-top: -24px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title {
+    margin-top: -64px;
     font-size: 18px;
     letter-spacing: 0.9px;
   }
@@ -1149,6 +1159,7 @@ body {
 .products__title::before {
   content: "";
   position: absolute;
+  margin-top: 24px;
   width: 296px;
   height: 2px;
   background: var(--lines_color);
@@ -1156,34 +1167,35 @@ body {
 }
 @media screen and (min-width: 834px) {
   .products__title::before {
+    margin-top: 22px;
     width: 380px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title::before {
+    margin-top: 24px;
     height: 4px;
     width: 598px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__title::before {
+    margin-top: 32px;
     height: 6px;
     width: 716px;
   }
 }
 .products__title--type1 {
-  margin-top: 48px;
+  margin-left: -66px;
 }
 @media screen and (min-width: 834px) {
   .products__title--type1 {
-    margin-top: -24px;
     margin-left: 90px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title--type1 {
-    margin-top: -64px;
-    margin-left: 160px;
+    margin-left: 162px;
   }
 }
 @media screen and (min-width: 1728px) {
@@ -1192,73 +1204,85 @@ body {
   }
 }
 .products__title--type1::before {
-  margin-top: 24px;
+  margin-left: 32px;
 }
 @media screen and (min-width: 834px) {
   .products__title--type1::before {
-    margin-top: 22px;
     margin-left: -88px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title--type1::before {
-    margin-top: 24px;
     margin-left: -271px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__title--type1::before {
-    margin-top: 32px;
     margin-left: -281px;
   }
 }
 .products__title--type2 {
-  margin-top: 56px;
-  margin-left: 799px;
+  margin-top: 80px;
+  margin-left: -94px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type2 {
+    margin-left: 374px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__title--type2 {
+    margin-left: 562px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__title--type2 {
+    margin-left: 718px;
+  }
 }
 .products__title--type2::before {
-  margin-top: 30px;
   border-radius: 8px 0px 0px 8px;
+  margin-left: 72px;
+}
+@media screen and (min-width: 834px) {
+  .products__title--type2::before {
+    margin-left: 0px;
+  }
 }
 .products__title--type3 {
-  margin-top: 48px;
+  margin-left: 4px;
 }
 @media screen and (min-width: 834px) {
   .products__title--type3 {
-    margin-top: -24px;
     margin-bottom: 0;
-    margin-left: 90px;
+    margin-left: 108px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title--type3 {
-    margin-top: -64px;
-    margin-left: 160px;
+    margin-left: 182px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__title--type3 {
-    margin-left: 148px;
+    margin-left: 176px;
   }
 }
 .products__title--type3::before {
-  margin-top: 24px;
+  margin-left: -12px;
 }
 @media screen and (min-width: 834px) {
   .products__title--type3::before {
-    margin-top: 22px;
-    margin-left: -88px;
+    margin-left: -108px;
   }
 }
 @media screen and (min-width: 1440px) {
   .products__title--type3::before {
-    margin-top: 24px;
-    margin-left: -271px;
+    margin-left: -292px;
   }
 }
 @media screen and (min-width: 1728px) {
   .products__title--type3::before {
-    margin-top: 32px;
     margin-left: -308px;
   }
 }
@@ -1477,13 +1501,19 @@ body {
     height: 440px;
   }
 }
+@media screen and (min-width: 834px) {
+  .card__title--hidden {
+    display: none;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .card__title--hidden {
+    display: contents;
+  }
+}
 .card__title {
   position: relative;
-  bottom: 84px;
-  width: 360px;
-  height: 84px;
   margin: 0;
-  padding: 28px 28px;
   background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
   box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
   -webkit-backdrop-filter: blur(7.5px);
@@ -1496,22 +1526,44 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
 }
-.card__title--type2 {
-  position: relative;
-  bottom: 84px;
-  width: 360px;
-  height: 84px;
-  margin: 0;
-  padding: 20px 52px;
-  background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
-  box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
-  -webkit-backdrop-filter: blur(7.5px);
-          backdrop-filter: blur(7.5px);
-  border-radius: 0px 0px 8px 8px;
-  font-family: var(--title_font);
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.15em;
-  text-transform: uppercase;
-  color: #FFFFFF;
+@media screen and (min-width: 834px) {
+  .card__title {
+    width: 200px;
+    height: 72px;
+    padding: 24px 8px;
+    bottom: 72px;
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .card__title {
+    width: 296px;
+    height: 72px;
+    padding: 24px 20px;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .card__title {
+    width: 360px;
+    height: 84px;
+    bottom: 84px;
+    padding: 28px 26px;
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .card__title--type2 {
+    padding: 16px 0px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .card__title--type2 {
+    padding: 12px 20px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .card__title--type2 {
+    padding: 12px 32px;
+  }
 }/*# sourceMappingURL=main.css.map */
